# styledterm

./: .gitignore  LICENSE  README.md  TODO.md  build-instructions.md  build-packages.sh  example1.py  example2.py  pyproject.toml  simple.py  tasks.py
_dev/: contextmng.py  directwrite.py  varinjection.py
debian/: changelog  control
examples/: example1.py  example2.py  example3.py  example4.py  example4_with-syntanx.py  example5.py
styledterm/: __init__.py  printer.py  simple.py
